--- a/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
@@ -802,7 +802,7 @@ spec:
                                           in the namespaces field. null selector and
                                           null or empty namespaces list means "this
                                           pod's namespace". An empty selector ({})
-                                          matches all namespaces. This field is alpha-level
+                                          matches all namespaces. This field is beta-level
                                           and is only honored when PodAffinityNamespaceSelector
                                           feature is enabled.
                                         properties:
@@ -969,7 +969,7 @@ spec:
                                       field. null selector and null or empty namespaces
                                       list means "this pod's namespace". An empty
                                       selector ({}) matches all namespaces. This field
-                                      is alpha-level and is only honored when PodAffinityNamespaceSelector
+                                      is beta-level and is only honored when PodAffinityNamespaceSelector
                                       feature is enabled.
                                     properties:
                                       matchExpressions:
@@ -1132,7 +1132,7 @@ spec:
                                           in the namespaces field. null selector and
                                           null or empty namespaces list means "this
                                           pod's namespace". An empty selector ({})
-                                          matches all namespaces. This field is alpha-level
+                                          matches all namespaces. This field is beta-level
                                           and is only honored when PodAffinityNamespaceSelector
                                           feature is enabled.
                                         properties:
@@ -1299,7 +1299,7 @@ spec:
                                       field. null selector and null or empty namespaces
                                       list means "this pod's namespace". An empty
                                       selector ({}) matches all namespaces. This field
-                                      is alpha-level and is only honored when PodAffinityNamespaceSelector
+                                      is beta-level and is only honored when PodAffinityNamespaceSelector
                                       feature is enabled.
                                     properties:
                                       matchExpressions:
@@ -1398,11 +1398,12 @@ spec:
                               image''s CMD is used if this is not provided. Variable
                               references $(VAR_NAME) are expanded using the container''s
                               environment. If a variable cannot be resolved, the reference
-                              in the input string will be unchanged. The $(VAR_NAME)
-                              syntax can be escaped with a double $$, ie: $$(VAR_NAME).
-                              Escaped references will never be expanded, regardless
-                              of whether the variable exists or not. Cannot be updated.
-                              More info: https://kubernetes.io/docs/tasks/inject-data-application/define-command-argument-container/#running-a-command-in-a-shell'
+                              in the input string will be unchanged. Double $$ are
+                              reduced to a single $, which allows for escaping the
+                              $(VAR_NAME) syntax: i.e. "$$(VAR_NAME)" will produce
+                              the string literal "$(VAR_NAME)". Escaped references
+                              will never be expanded, regardless of whether the variable
+                              exists or not. Cannot be updated. More info: https://kubernetes.io/docs/tasks/inject-data-application/define-command-argument-container/#running-a-command-in-a-shell'
                             items:
                               type: string
                             type: array
@@ -1412,10 +1413,12 @@ spec:
                               is not provided. Variable references $(VAR_NAME) are
                               expanded using the container''s environment. If a variable
                               cannot be resolved, the reference in the input string
-                              will be unchanged. The $(VAR_NAME) syntax can be escaped
-                              with a double $$, ie: $$(VAR_NAME). Escaped references
-                              will never be expanded, regardless of whether the variable
-                              exists or not. Cannot be updated. More info: https://kubernetes.io/docs/tasks/inject-data-application/define-command-argument-container/#running-a-command-in-a-shell'
+                              will be unchanged. Double $$ are reduced to a single
+                              $, which allows for escaping the $(VAR_NAME) syntax:
+                              i.e. "$$(VAR_NAME)" will produce the string literal
+                              "$(VAR_NAME)". Escaped references will never be expanded,
+                              regardless of whether the variable exists or not. Cannot
+                              be updated. More info: https://kubernetes.io/docs/tasks/inject-data-application/define-command-argument-container/#running-a-command-in-a-shell'
                             items:
                               type: string
                             type: array
@@ -1432,14 +1435,16 @@ spec:
                                   type: string
                                 value:
                                   description: 'Variable references $(VAR_NAME) are
-                                    expanded using the previous defined environment
+                                    expanded using the previously defined environment
                                     variables in the container and any service environment
                                     variables. If a variable cannot be resolved, the
                                     reference in the input string will be unchanged.
-                                    The $(VAR_NAME) syntax can be escaped with a double
-                                    $$, ie: $$(VAR_NAME). Escaped references will
-                                    never be expanded, regardless of whether the variable
-                                    exists or not. Defaults to "".'
+                                    Double $$ are reduced to a single $, which allows
+                                    for escaping the $(VAR_NAME) syntax: i.e. "$$(VAR_NAME)"
+                                    will produce the string literal "$(VAR_NAME)".
+                                    Escaped references will never be expanded, regardless
+                                    of whether the variable exists or not. Defaults
+                                    to "".'
                                   type: string
                                 valueFrom:
                                   description: Source for the environment variable's
@@ -1922,8 +1927,9 @@ spec:
                                   value provided by the pod spec. Value must be non-negative
                                   integer. The value zero indicates stop immediately
                                   via the kill signal (no opportunity to shut down).
-                                  This is an alpha field and requires enabling ProbeTerminationGracePeriod
-                                  feature gate.
+                                  This is a beta field and requires enabling ProbeTerminationGracePeriod
+                                  feature gate. Minimum value is 1. spec.terminationGracePeriodSeconds
+                                  is used if unset.
                                 format: int64
                                 type: integer
                               timeoutSeconds:
@@ -2112,8 +2118,9 @@ spec:
                                   value provided by the pod spec. Value must be non-negative
                                   integer. The value zero indicates stop immediately
                                   via the kill signal (no opportunity to shut down).
-                                  This is an alpha field and requires enabling ProbeTerminationGracePeriod
-                                  feature gate.
+                                  This is a beta field and requires enabling ProbeTerminationGracePeriod
+                                  feature gate. Minimum value is 1. spec.terminationGracePeriodSeconds
+                                  is used if unset.
                                 format: int64
                                 type: integer
                               timeoutSeconds:
@@ -2152,9 +2159,10 @@ spec:
                                 type: object
                             type: object
                           securityContext:
-                            description: 'Security options the pod should run with.
-                              More info: https://kubernetes.io/docs/concepts/policy/security-context/
-                              More info: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/'
+                            description: 'SecurityContext defines the security options
+                              the container should be run with. If set, the fields
+                              of SecurityContext override the equivalent fields of
+                              PodSecurityContext. More info: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/'
                             properties:
                               allowPrivilegeEscalation:
                                 description: 'AllowPrivilegeEscalation controls whether
@@ -2294,6 +2302,20 @@ spec:
                                     description: GMSACredentialSpecName is the name
                                       of the GMSA credential spec to use.
                                     type: string
+                                  hostProcess:
+                                    description: HostProcess determines if a container
+                                      should be run as a 'Host Process' container.
+                                      This field is alpha-level and will only be honored
+                                      by components that enable the WindowsHostProcessContainers
+                                      feature flag. Setting this field without the
+                                      feature flag will result in errors when validating
+                                      the Pod. All of a Pod's containers must have
+                                      the same effective HostProcess value (it is
+                                      not allowed to have a mix of HostProcess containers
+                                      and non-HostProcess containers).  In addition,
+                                      if HostProcess is true then HostNetwork must
+                                      also be set to true.
+                                    type: boolean
                                   runAsUserName:
                                     description: The UserName in Windows to run the
                                       entrypoint of the container process. Defaults
@@ -2436,8 +2458,9 @@ spec:
                                   value provided by the pod spec. Value must be non-negative
                                   integer. The value zero indicates stop immediately
                                   via the kill signal (no opportunity to shut down).
-                                  This is an alpha field and requires enabling ProbeTerminationGracePeriod
-                                  feature gate.
+                                  This is a beta field and requires enabling ProbeTerminationGracePeriod
+                                  feature gate. Minimum value is 1. spec.terminationGracePeriodSeconds
+                                  is used if unset.
                                 format: int64
                                 type: integer
                               timeoutSeconds:
@@ -2749,6 +2772,19 @@ spec:
                               description: GMSACredentialSpecName is the name of the
                                 GMSA credential spec to use.
                               type: string
+                            hostProcess:
+                              description: HostProcess determines if a container should
+                                be run as a 'Host Process' container. This field is
+                                alpha-level and will only be honored by components
+                                that enable the WindowsHostProcessContainers feature
+                                flag. Setting this field without the feature flag
+                                will result in errors when validating the Pod. All
+                                of a Pod's containers must have the same effective
+                                HostProcess value (it is not allowed to have a mix
+                                of HostProcess containers and non-HostProcess containers).  In
+                                addition, if HostProcess is true then HostNetwork
+                                must also be set to true.
+                              type: boolean
                             runAsUserName:
                               description: The UserName in Windows to run the entrypoint
                                 of the container process. Defaults to the user specified
@@ -3280,15 +3316,61 @@ spec:
                                           either: * An existing VolumeSnapshot object
                                           (snapshot.storage.k8s.io/VolumeSnapshot)
                                           * An existing PVC (PersistentVolumeClaim)
-                                          * An existing custom resource that implements
-                                          data population (Alpha) In order to use
-                                          custom resource types that implement data
-                                          population, the AnyVolumeDataSource feature
-                                          gate must be enabled. If the provisioner
-                                          or an external controller can support the
-                                          specified data source, it will create a
-                                          new volume based on the contents of the
-                                          specified data source.'
+                                          If the provisioner or an external controller
+                                          can support the specified data source, it
+                                          will create a new volume based on the contents
+                                          of the specified data source. If the AnyVolumeDataSource
+                                          feature gate is enabled, this field will
+                                          always have the same contents as the DataSourceRef
+                                          field.'
+                                        properties:
+                                          apiGroup:
+                                            description: APIGroup is the group for
+                                              the resource being referenced. If APIGroup
+                                              is not specified, the specified Kind
+                                              must be in the core API group. For any
+                                              other third-party types, APIGroup is
+                                              required.
+                                            type: string
+                                          kind:
+                                            description: Kind is the type of resource
+                                              being referenced
+                                            type: string
+                                          name:
+                                            description: Name is the name of resource
+                                              being referenced
+                                            type: string
+                                        required:
+                                        - kind
+                                        - name
+                                        type: object
+                                      dataSourceRef:
+                                        description: 'Specifies the object from which
+                                          to populate the volume with data, if a non-empty
+                                          volume is desired. This may be any local
+                                          object from a non-empty API group (non core
+                                          object) or a PersistentVolumeClaim object.
+                                          When this field is specified, volume binding
+                                          will only succeed if the type of the specified
+                                          object matches some installed volume populator
+                                          or dynamic provisioner. This field will
+                                          replace the functionality of the DataSource
+                                          field and as such if both fields are non-empty,
+                                          they must have the same value. For backwards
+                                          compatibility, both fields (DataSource and
+                                          DataSourceRef) will be set to the same value
+                                          automatically if one of them is empty and
+                                          the other is non-empty. There are two important
+                                          differences between DataSource and DataSourceRef:
+                                          * While DataSource only allows two specific
+                                          types of objects, DataSourceRef   allows
+                                          any non-core object, as well as PersistentVolumeClaim
+                                          objects. * While DataSource ignores disallowed
+                                          values (dropping them), DataSourceRef   preserves
+                                          all values, and generates an error if a
+                                          disallowed value is   specified. (Alpha)
+                                          Using this field requires the AnyVolumeDataSource
+                                          feature gate to be enabled.'
                                         properties:
                                           apiGroup:
                                             description: APIGroup is the group for
