--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -227,41 +227,111 @@ spec:
                   Blocks are configuration file fragments added to the generated nginx
                   config.
                 type: object
-              certificateSubject:
-                description: |-
-                  CertificateSubject contains the certificate subject information.
-                  This field is used to set the subject of the TLS certificate.
+              certificateSpec:
+                description: CertificateSpec customize a relevant certificate.Spec
+                  object subset
                 properties:
-                  countries:
-                    items:
-                      type: string
-                    type: array
-                  localities:
-                    items:
-                      type: string
-                    type: array
-                  organizationalUnits:
-                    items:
-                      type: string
-                    type: array
-                  organizations:
-                    items:
-                      type: string
-                    type: array
-                  postalCodes:
-                    items:
-                      type: string
-                    type: array
-                  provinces:
-                    items:
-                      type: string
-                    type: array
-                  serialNumber:
-                    type: string
-                  streetAddresses:
-                    items:
-                      type: string
-                    type: array
+                  privateKey:
+                    description: |-
+                      CertificatePrivateKey contains configuration options for private keys
+                      used by the Certificate controller.
+                      This allows control of how private keys are rotated.
+                    properties:
+                      algorithm:
+                        description: |-
+                          Algorithm is the private key algorithm of the corresponding private key
+                          for this certificate. If provided, allowed values are either `RSA`,`Ed25519` or `ECDSA`
+                          If `algorithm` is specified and `size` is not provided,
+                          key size of 256 will be used for `ECDSA` key algorithm and
+                          key size of 2048 will be used for `RSA` key algorithm.
+                          key size is ignored when using the `Ed25519` key algorithm.
+                        enum:
+                        - RSA
+                        - ECDSA
+                        - Ed25519
+                        type: string
+                      encoding:
+                        description: |-
+                          The private key cryptography standards (PKCS) encoding for this
+                          certificate's private key to be encoded in.
+                          If provided, allowed values are `PKCS1` and `PKCS8` standing for PKCS#1
+                          and PKCS#8, respectively.
+                          Defaults to `PKCS1` if not specified.
+                        enum:
+                        - PKCS1
+                        - PKCS8
+                        type: string
+                      rotationPolicy:
+                        description: |-
+                          RotationPolicy controls how private keys should be regenerated when a
+                          re-issuance is being processed.
+                          If set to Never, a private key will only be generated if one does not
+                          already exist in the target `spec.secretName`. If one does exists but it
+                          does not have the correct algorithm or size, a warning will be raised
+                          to await user intervention.
+                          If set to Always, a private key matching the specified requirements
+                          will be generated whenever a re-issuance occurs.
+                          Default is 'Never' for backward compatibility.
+                        enum:
+                        - Never
+                        - Always
+                        type: string
+                      size:
+                        description: |-
+                          Size is the key bit size of the corresponding private key for this certificate.
+                          If `algorithm` is set to `RSA`, valid values are `2048`, `4096` or `8192`,
+                          and will default to `2048` if not specified.
+                          If `algorithm` is set to `ECDSA`, valid values are `256`, `384` or `521`,
+                          and will default to `256` if not specified.
+                          If `algorithm` is set to `Ed25519`, Size is ignored.
+                          No other values are allowed.
+                        type: integer
+                    type: object
+                  revisionHistoryLimit:
+                    format: int32
+                    type: integer
+                  subject:
+                    description: X509Subject Full X509 name specification
+                    properties:
+                      countries:
+                        description: Countries to be used on the Certificate.
+                        items:
+                          type: string
+                        type: array
+                      localities:
+                        description: Cities to be used on the Certificate.
+                        items:
+                          type: string
+                        type: array
+                      organizationalUnits:
+                        description: Organizational Units to be used on the Certificate.
+                        items:
+                          type: string
+                        type: array
+                      organizations:
+                        description: Organizations to be used on the Certificate.
+                        items:
+                          type: string
+                        type: array
+                      postalCodes:
+                        description: Postal codes to be used on the Certificate.
+                        items:
+                          type: string
+                        type: array
+                      provinces:
+                        description: State/Provinces to be used on the Certificate.
+                        items:
+                          type: string
+                        type: array
+                      serialNumber:
+                        description: Serial number to be used on the Certificate.
+                        type: string
+                      streetAddresses:
+                        description: Street addresses to be used on the Certificate.
+                        items:
+                          type: string
+                        type: array
+                    type: object
                 type: object
               configHistoryLimit:
                 description: The number of old Configs to retain to allow rollback.
